Simplify MV query rewrite a little bit,
And get old JUnit pass,
and some minor further enhancements of normalizer